partly port SarReader and NsaReader to c++ string

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,6 +92,6 @@ link_libraries(
 #    ${QT_LIBRARIES}
 )
 
-add_executable(onscripter ${SRCS}) # ${HDRS_MOC})
+add_executable(onscripter-fork ${SRCS}) # ${HDRS_MOC})
 
 set(CMAKE_BUILD_TYPE Debug)
